# pytorch-lightning-tabular-classification

./: .gitignore  README.md  README_PyTorchLightning_Tutorial.MD  README_packaging_classification.md  env_vars.yml  env_vars_azureml_compute.yml  env_vars_colab.yml  environment.yml  environment_stable.yml  main.py  pyproject.toml  requirements.yml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
ml_packaging_classification/: pyproject.toml
notebooks/: 00_anonymize_data.ipynb  10_ETL_data_cleaning.ipynb  11_data_analysis.ipynb  20_00_clf_pipeline_baseline.ipynb  20_01_clf_pipeline_automl_pycaret.ipynb  20_02_clf_pipeline_automl_autogluontabular.ipynb  20_03_01_clf_pipeline_pytorch_MLP.ipynb  20_03_03_clf_pipeline_pytorch_embeddingMLP.ipynb  20_03_04_clf_pipeline_pytorch_embeddingMLP_optuna.ipynb  20_classification_analysis.ipynb  20_classification_pipelines_nn_pytorch_optuna.ipynb  20_clf_analysis_and_baseline.ipynb  20_clf_pipeline_automl.ipynb  20_clf_pipeline_automl_pycaret.ipynb  20_clf_pipeline_baseline.ipynb  20_clf_pipeline_pytorch_MLP.ipynb  20_clf_pipeline_pytorch_MLP_optuna.ipynb  20_clf_pipeline_pytorch_embeddingMLP.ipynb  20_clf_pipeline_pytorch_embeddingMLP_optuna.ipynb  21_00_clf_pipelines_decisiontree_optuna_oversampling_bestmodelanalysis.ipynb  21_01_threshold_definition_randomforest_bestmodel.ipynb  21_02_clf_pipelines_decisiontree_optuna_oversampling_bestmodel_production.ipynb  21_classification_pipelines_decisiontree_optuna_oversampling_bestmodel_production.ipynb  21_classification_pipelines_decisiontree_optuna_oversampling_bestmodelanalysis.ipynb  21_clf_pipelines_decisiontree_optuna_oversampling_bestmodel_production.ipynb  29_clf_models_performance_benchmarking.ipynb  30_business_decision_optimization_best model.ipynb  30_business_decision_optimization_best_model.ipynb  (+1 more)
(+22 files in other folders)
